Suppress warning "sun.misc.Unsafe::objectFieldOffset" in Ktlint CLI on Java24+ as the problem occurs in class "org.jetbrains.kotlin.com.intellij.util.containers.Unsafe" (#3040)
At other places in code and documentation, information about this warning is added as comment, as the warning can only be suppressed when actually running on Java 24+.

Closes #2793