@@ -52,6 +52,8 @@ tasks.register<JavaExec>("ktlintFormat") {
     classpath = ktlint
     mainClass = "com.pinterest.ktlint.Main"
     jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    // Suppress warning "sun.misc.Unsafe::objectFieldOffset" on Java24+ (https://github.com/pinterest/ktlint/issues/2973)
+    // jvmArgs("--sun-misc-unsafe-memory-access=allow")
     args(
         "-F",
         "**/src/**/*.kt",
